kube/knative/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: service-webhook
webhooks:
  - name: validate.crd.service
    clientConfig:
      url: https://127.0.0.1:9092/validate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREekNDQWZlZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFwTVJrd0Z3WURWUVFLRXhCRFEwVWcKVkdWamFHNXZiRzluYVdWek1Rd3dDZ1lEVlFRREV3TkRRMFV3SGhjTk1qVXdNekU0TURneU56VXlXaGNOTkRVdwpNekU0TURneU56VXlXakFwTVJrd0Z3WURWUVFLRXhCRFEwVWdWR1ZqYUc1dmJHOW5hV1Z6TVF3d0NnWURWUVFECkV3TkRRMFV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRHJ4amFZbDNEY0FyN2cKWGV3U0I0VlI0ampCY29Ldi9LcXNRWnpsS3ArUjBJYk4zK1QvSEdIZFZPcXdMMVRVKzdoUVR1YmlyQUNMdThXNgpBMisyaDFaNmx5 [...]
    admissionReviewVersions:
      - v1
      - v1beta1
    failurePolicy: Fail
    matchPolicy: Exact
    matchConditions:
      - name: cce-managed-service
        expression: object.spec.type == "LoadBalancer"
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["services"]
        scope: "*"
    sideEffects: None
    timeoutSeconds: 30
